--- a/PrinterQuotationEngine.Web/appsettings.json
+++ b/PrinterQuotationEngine.Web/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AppOptions": {
+    "UploadFolderName": "WorkingFiles"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
