--- a/PrinterQuotationEngine.Web/PrinterQuotationEngine.Web.csproj
+++ b/PrinterQuotationEngine.Web/PrinterQuotationEngine.Web.csproj
@@ -23,6 +23,16 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WorkingFiles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="WorkingFiles\Sphere20.stl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
