--- a/PrinterQuotationEngine.Web/ClientApp/package.json
+++ b/PrinterQuotationEngine.Web/ClientApp/package.json
@@ -34,7 +34,7 @@
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
-    "three": "0.106.2",
+    "three": "^0.117.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
