Working on the quote flow, got the api backend calling the slicer.

--- a/PrinterQuotationEngine.Web/ClientApp/package.json
+++ b/PrinterQuotationEngine.Web/ClientApp/package.json
@@ -30,11 +30,13 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
+    "ngx-spinner": "^9.0.2",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "three": "^0.117.0",
     "tslib": "^1.10.0",
+    "underscore": "^1.10.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
+    "@types/underscore": "^1.10.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
