--- a/PrinterQuotationEngine.Web/appsettings.json
+++ b/PrinterQuotationEngine.Web/appsettings.json
@@ -1,6 +1,43 @@
 {
   "AppOptions": {
+    "AppName": "",
     "UploadFolderName": "WorkingFiles"
+  },
+  "PrintOptions": {
+    "PrinterTimeCost": 0.50,
+    "Materials": [
+      {
+        "Name": "PLA",
+        "CostPerGram": 0.055,
+        "TimeAdjustment": 1,
+        "Colors": [ "Gray", "Black", "Yellow", "Orange", "Pink", "Copper", "Blue", "Green", "White" ]
+      },
+      {
+        "Name": "PETG",
+        "CostPerGram": 0.075,
+        "TimeAdjustment": 1,
+        "Colors": [ "Gray", "Black", "Yellow", "Orange", "Pink", "Copper", "Blue", "Green", "White" ]
+      }
+    ],
+    "Timing": {
+      "CostPerMin": 0.75,
+      "ModelPrep": 1,
+      "Slicing": 1,
+      "PrinterPrep": 2,
+      "JobStart": 2,
+      "JobEnd": 2,
+      "SupportRemoval": 15,
+      "PostProcessing": 5
+    },
+    "FixedCosts": {
+      "Consumables": 2,
+      "Electricity": 1,
+      "PrinterDepreciation": 2
+    },
+    "CostAdjustments": {
+      "FailureRate": 0.15,
+      "Markup": 0.30
+    }
   },
   "Logging": {
     "LogLevel": {
